# first-trading-app

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  IBKR_SETUP.md  LICENSE  README.md  SECURITY.md  config.toml  run.sh  run_backtest.sh
examples/: strategy_test.rs
src/: analytics.rs  backtesting.rs  config.rs  data.rs  historical_backtesting.rs  ibkr.rs  indicators.rs  lib.rs  main.rs  orders.rs  portfolio.rs  strategy.rs  strategy_engine.rs
